using UnityEngine;
using UnityEngine.AI;

public class RunState : StateMachineBehaviour
{
    NavMeshAgent agent;
    EnemyData data;

    override public void OnStateEnter(Animator animator, AnimatorStateInfo stateInfo, int layerIndex)
    {
        agent = animator.GetComponentInParent<NavMeshAgent>();
        data  = animator.GetComponentInParent<EnemyData>();

        if (agent == null || data == null || data.player == null) return;

        agent.isStopped = false;
        agent.speed = 4f;
        agent.stoppingDistance = data.attackRange; // üî• d·ª´ng ƒë√∫ng t·∫ßm ƒë√°nh
    }

    override public void OnStateUpdate(Animator animator, AnimatorStateInfo stateInfo, int layerIndex)
    {
        if (agent == null || data == null || data.player == null) return;

        float distance = Vector3.Distance(
            animator.transform.position,
            data.player.position
        );

        // üëâ CH∆ØA V√ÄO T·∫¶M ‚Üí ƒêU·ªîI
        if (distance > data.attackRange)
        {
            agent.SetDestination(data.player.position);
        }

        // ‚úÖ V√ÄO T·∫¶M ‚Üí ƒê√ÅNH
        if (distance <= data.attackRange)
        {
            agent.isStopped = true;
            animator.SetBool("isRunning", false);
            animator.SetBool("isAttacking", true);
            return;
        }

        // ‚ùå M·∫•t d·∫•u
        if (distance > data.chaseRange)
        {
            animator.SetBool("isRunning", false);
            animator.SetBool("isPatrolling", true);
        }
    }

    override public void OnStateExit(Animator animator, AnimatorStateInfo stateInfo, int layerIndex)
    {
        if (agent != null)
            agent.isStopped = false;
    }
}
